--- a/employee-directory/src/components/TableData/style.css
+++ b/employee-directory/src/components/TableData/style.css
@@ -1,4 +1,20 @@
-.photo {
+.datafeild {
     /* background-color: red; */
-    min-width: 200px;
+    min-width: 180px;
+    max-width: 500px;
+}
+
+.wide {
+    /* background-color: red; */
+    min-width: 250px;
+    max-width: 500px;
+}
+
+.centre {
+    /* position: absolute; */
+    /* margin-right: auto;
+    margin-left: auto;
+    width: 50%; */
+    margin: 0 auto;
+    width: 90%;
 }
