code cleaning, cursor added to 'name' heading

--- a/employee-directory/src/components/TableHeading/style.css
+++ b/employee-directory/src/components/TableHeading/style.css
@@ -1,11 +1,13 @@
 .datafeild {
-    /* background-color: red; */
     min-width: 180px;
     max-width: 500px;
 }
 
 .wide {
-    /* background-color: red; */
     min-width: 250px;
     max-width: 500px;
+}
+
+#name {
+    cursor: pointer;
 }
